feat: Add center page style
& fix: Modify image Component load logic

--- a/src/components/Layout/Card/index.scss
+++ b/src/components/Layout/Card/index.scss
@@ -2,6 +2,7 @@ $card-padding: 24px;
 
 .card {
   position: relative;
+  box-sizing: border-box;
   padding: $card-padding;
   margin-bottom: 24px;
 
