--- a/src/pages/Dashboard/Audit/Record/index.scss
+++ b/src/pages/Dashboard/Audit/Record/index.scss
@@ -2,6 +2,8 @@
 
 .auditRecord {
   .baseInfo {
+    height: 96px;
+
     .main {
       display: inline-block;
       width: 70%;
@@ -12,11 +14,13 @@
       margin-right: 12px;
       width: 48px;
       height: 48px;
+      line-height: 48px;
       border: 1px solid $N10;
     }
 
     .title {
       margin-bottom: 4px;
+      height: 24px;
       line-height: 24px;
       font-size: 20px;
       font-weight: 500;
@@ -24,6 +28,7 @@
     }
 
     .word {
+      margin-left: 60px;
       line-height: 20px;
       font-size: 12px;
       color: $N65;
