--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -28,6 +28,12 @@
     margin-left: $menu-nav-width + 20px;
   }
 
+  &.detailPage {
+    width: calc(100% - #{$menu-nav-width});
+    margin-left: $menu-nav-width;
+    margin-top: 88px;
+  }
+
   .backBtn {
     //width: $content-width;
     margin: 0 auto 20px;
@@ -158,4 +164,39 @@
       }
     }
   }
+}
+
+.pageTitle {
+  position: fixed;
+  left: $menu-nav-width;
+  top: 0;
+  z-index: 2;
+  width: 100%;
+  height: 64px;
+  box-shadow: inset 0 -1px 0 0 $N10;
+  background-color: $N0;
+
+  .title {
+    margin: 0 auto;
+    width: calc(100% - #{$min-center-page-margin}*2);
+    max-width: $max-center-page-width;
+    line-height: 64px;
+    font-size: 16px;
+    font-weight: 500;
+    color: $N500;
+  }
+
+  .icon {
+    float: left;
+    margin-top: 22px;
+    margin-left: -40px;
+    line-height: 20px;
+    cursor: pointer;
+  }
+}
+
+.centerPage {
+  margin: 0 auto;
+  width: calc(100% - #{$min-center-page-margin}*2);
+  max-width: $max-center-page-width;
 }
