feat: Create app

--- a/src/components/Base/Upload/index.scss
+++ b/src/components/Base/Upload/index.scss
@@ -8,5 +8,9 @@
       cursor: not-allowed;
       pointer-events: none;
     }
+    &.upload-dragover {
+      opacity: 0.3;
+      box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+    }
   }
 }
