--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -64,7 +64,7 @@ $N0: #ffffff;
 //$body-background-color: #bcc2d126;
 
 
-// extract from _vars
+// extract from _varrgb(35, 35, 36)s
 $blue: #5cb8e6;
 $red: #e67373;
 $green: #52cc8f;
@@ -100,7 +100,6 @@ $link-hover: $P75;
 $tr-hover-bg: rgba(213, 218, 229, 0.15);
 $body-bg: #f9fafb;
 $delete-btn: #ac4949;
-
 $body-background-color: $background-color;
 
 $border-lighter: #e7e7e7;
