--- a/src/pages/Dashboard/Apps/Add/index.scss
+++ b/src/pages/Dashboard/Apps/Add/index.scss
@@ -20,84 +20,24 @@
 .createApp {
   background: $background-color;
   min-width: 744px;
-  min-height: calc(100vh - 100px);
-
-  .operate {
-    position: fixed;
-    top: 20px;
-    left: 20px;
-    right: 20px;
-    height: 20px;
-
-    > label {
-      display: inline-block;
-      font-size: 12px;
-      line-height: 20px;
-      color: $N100;
-      cursor: pointer;
-    }
-
-    :global {
-      .icon{
-        margin-right: 6px;
-      }
-    }
-  }
+  text-align: center;
 }
 
-.createVersion {
-  .stepName {
-    margin-bottom: 4px;
-    font-size: 14px;
-    line-height: 24px;
-    color: $N300;
-  }
-
-  .stepExplain {
-    margin-bottom: 40px;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 28px;
-    letter-spacing: 0;
-    color: $N500;
-  }
-
-  .stepOperate {
-    display: inline-block;
-    margin: 60px 0 0;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    color: $P75;
-    cursor: pointer;
-    &.noClick {
-      opacity: 0.5;
-      cursor: not-allowed;
-    }
-  }
-
+.createApp {
   .upload {
     position: relative;
     display: inline-block;
     box-sizing: border-box;
-    margin-bottom: 8px;
     width: 552px;
-    height: 120px;
-    padding: 36px 24px 36px 100px;
+    padding: 32px 24px;
     border-radius: 2px;
     background-color: $N0;
     border: dashed 1px $N30;
     text-align: left;
     cursor: pointer;
 
-    .word {
-      margin-bottom: 4px;
-      font-size: 14px;
-      line-height: 24px;
-      color: $N300;
-    }
-
     .note {
+      text-align: center;
       font-size: 12px;
       line-height: 20px;
       color: $N100;
@@ -105,9 +45,13 @@
 
     :global {
       .icon {
-        float: left;
-        margin-right: 12px;
+        display: block;
+        margin: 0 auto 8px;
       }
+    }
+    &.uploadError {
+      background-color: $background-color;
+      border: solid 1px $background-color;
     }
   }
 
@@ -140,72 +84,150 @@
   }
 
   .errorNote {
-    display: inline-block;
-    position: relative;
-    box-sizing: border-box;
-    width: 552px;
-    //height: 40px;
-    padding: 7px 15px 7px 44px;
-    font-size: 14px;
-    line-height: 24px;
-    color: $R300;
-    border-radius: 2px;
-    background-color: $R10;
-    box-shadow: 0 2px 4px 0 rgba(178, 42, 38, 0.1);
-    border: solid 1px $R45;
-    text-align: left;
+    font-size: 12px;
+    line-height: 20px;
+    color: $N75;
+    text-align: center;
 
     :global {
       .icon {
-        position: absolute;
-        top: 50%;
-        left: 10px;
-        transform: translateY(-50%);
+        display: block;
+        margin-bottom: 8px;
 
         svg {
-          --primary-color: #{$N0};
-          --secondary-color: #{$R300};
+          --primary-color: #{$R400};
+          --secondary-color: #{$R30};
         }
       }
     }
   }
-
-  .checkImg {
-    margin: 48px 0 40px;
-
-    > label {
-      display: inline-block;
-      width: 48px;
-      height: 48px;
-      border-radius: 50%;
-      background-color: $G300;
-
-      :global {
-        svg {
-          --primary-color: #{$N0};
-          --secondary-color: #{$N0};
-        }
-      }
-    }
+  .errorNoteLink {
+    color: $P75;
   }
+}
 
-  .operateBtn {
-    margin-bottom: 12px;
-
-    button {
-      margin: 0 6px;
-    }
-  }
-
-  .operateWord {
-    margin-bottom: 16px;
+.config {
+  width: 927px;
+  margin: 20px auto;
+  text-align: left;
+  color: $N75;
+  position: relative;
+  span {
     font-size: 12px;
     line-height: 20px;
-    color: $N100;
+    padding: 6px 20px;
+    display: inline-block;
+  }
+  .configName {
+    width: 180px;
+  }
+  .configInfo {
+  }
+  .configMask {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background-image: linear-gradient(to bottom, rgba($body-bg, 0.75), $body-bg);
+  }
+}
 
-    .link {
-      color: $P75;
-      cursor: pointer;
+.cardContainer {
+  display: flex;
+  margin: 0 auto;
+  width: 927.7px;
+  flex-flow: row wrap;
+  > div:nth-child(3n+2) {
+    margin: 0 20.3px 20px;
+  }
+}
+
+.configMsg {
+  width: 947px;
+  margin: 0 auto;
+  text-align: left;
+  .appName {
+    width: 453px;
+  }
+  .appVersion {
+    width: 215px;
+  }
+  input {
+    display: block;
+    margin: 8px 0;
+  }
+  .configTitle {
+    display: block;
+    ont-size: 14px;
+    font-weight: 500;
+    line-height: 2;
+    color: $N500;
+  }
+  .tips {
+    display: block;
+    font-size: 12px;
+    line-height: 1.67;
+    color: $N75;
+  }
+  > div + div {
+    margin-top: 32px;
+  }
+  .appIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 96px;
+    height: 96px;
+    border-radius: 2px;
+    background: $N0;
+    margin: 8px auto;
+  }
+
+  .iconError {
+    font-size: 12px;
+    line-height: 20px;
+    color: $R200;
+  }
+
+  .iconImage {
+    max-width: 96px;
+  }
+  .iconText {
+    font-size: 12px;
+    color: $P75;
+  }
+}
+.successMsg {
+  margin: 132px auto 0;
+  text-align: center;
+
+  .checkedIcon {
+    :global {
+      svg {
+        --primary-color: #{$G100};
+        --secondary-color: #{$G30};
+      }
     }
+  }
+  .textTip {
+    font-size: 12px;
+    color: $N75;
+    margin: 12px auto 8px;
+  }
+  .textHeader {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    color: $N500;
+  }
+  .successBtns {
+    margin: 20px auto;
+  }
+  .addBtn {
+    color: $N300;
+    margin-left: 12px;
   }
 }
