--- a/src/pages/Dashboard/Apps/Card/index.scss
+++ b/src/pages/Dashboard/Apps/Card/index.scss
@@ -4,7 +4,7 @@
   background: $N0;
   box-shadow: 0 1px 4px 0 rgba($P400, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
   width: calc(25% - 20px);
-  margin: 10px;
+  margin: 0 10px 20px;
   color: $N75;
   cursor: pointer;
   .status {
