fix: Some eslint warning

--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -64,7 +64,7 @@ $N0: #ffffff;
 //$body-background-color: #bcc2d126;
 
 
-// extract from _varrgb(35, 35, 36)s
+// extract from _vars
 $blue: #5cb8e6;
 $red: #e67373;
 $green: #52cc8f;
