feat: VM cluster support add nodes

--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -101,6 +101,7 @@ $tr-hover-bg: rgba(213, 218, 229, 0.15);
 $body-bg: #f9fafb;
 $delete-btn: #ac4949;
 
+$body-fg-color: #576075;
 $body-background-color: $background-color;
 
 $border-lighter: #e7e7e7;
