--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -47,6 +47,28 @@
   }
 }
 
+.grayColor {
+  %spinner-basic {
+    border-radius: 50%;
+    width: 36px;
+    height: 36px;
+  }
+  .loadOuter{
+    .loader {
+      @extend %spinner-basic;
+      &:after {
+        @extend %spinner-basic
+      }
+      border-top:0.2em solid rgba($N300,0.2);
+      border-right:0.2em solid rgba($N300,0.2);
+      border-bottom:0.2em solid rgba($N300,0.2);
+      border-left:0.2em solid rgba($N300,1);
+      // border-color: rgba($N300, 0.2);
+    }
+  }
+}
+
+
 :global {
   .loadTable {
     position: static;
