feat: VM cluster support add nodes and resize (#564)
Add Cache lib
Fix delete cluster nodes
Fix cluster and detail store state tangle

--- a/src/pages/Dashboard/Clusters/Detail/index.scss
+++ b/src/pages/Dashboard/Clusters/Detail/index.scss
@@ -201,7 +201,6 @@
     }
 
     .pubKey{
-      height: 20px;
       line-height: 20px;
       font-size: 12px;
       color: $N75;
@@ -230,4 +229,17 @@
 }
 .additionalTable {
   margin-bottom: 50px;
+}
+
+.roleSetting {
+  display: block;
+  padding-top: 10px;
+
+  .roleSettingLabel {
+    width: 70px;
+    text-align: left;
+    font-weight: normal;
+    color: $body-fg-color;
+    margin-right: 10px;
+  }
 }
