--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -12,7 +12,7 @@
 
   &.hasMenu,
   &.hasNav {
-    margin: 56px 20px 32px $menu-width + 20px;
+    margin: 0 20px 32px $menu-width + 20px;
     //min-width: 950px;
     min-width: 992px;
     min-height: calc(100vh - 100px);
@@ -26,12 +26,6 @@
   &.hasNav {
     width: calc(100% - #{$menu-nav-width} - 40px);
     margin-left: $menu-nav-width + 20px;
-  }
-
-  &.detailPage {
-    width: calc(100% - #{$menu-nav-width});
-    margin-left: $menu-nav-width;
-    margin-top: 88px;
   }
 
   .backBtn {
@@ -166,37 +160,22 @@
   }
 }
 
-.pageTitle {
-  position: fixed;
-  left: $menu-nav-width;
-  top: 0;
-  z-index: 2;
-  width: 100%;
-  height: 64px;
-  box-shadow: inset 0 -1px 0 0 $N10;
-  background-color: $N0;
-
-  .title {
-    margin: 0 auto;
-    width: calc(100% - #{$min-center-page-margin}*2);
-    max-width: $max-center-page-width;
-    line-height: 64px;
-    font-size: 16px;
-    font-weight: 500;
-    color: $N500;
-  }
-
-  .icon {
-    float: left;
-    margin-top: 22px;
-    margin-left: -40px;
-    line-height: 20px;
-    cursor: pointer;
-  }
-}
-
 .centerPage {
   margin: 0 auto;
   width: calc(100% - #{$min-center-page-margin}*2);
   max-width: $max-center-page-width;
+
+  .pageTitle {
+    margin: 18px 0;
+    line-height: 28px;
+    font-size: 16px;
+    font-weight: 500;
+    color: $N500;
+
+    .backIcon {
+      float: left;
+      margin-left: -40px;
+      cursor: pointer;
+    }
+  }
 }
