--- a/src/pages/Dashboard/Apps/Versions/Detail/index.scss
+++ b/src/pages/Dashboard/Apps/Versions/Detail/index.scss
@@ -1,40 +1,168 @@
 @import '~scss/vars';
 
-.versionDetail {
-  .topInfo {
-    display: inline-block;
-  }
+.topInfo {
+  display: inline-block;
 
   .main {
-    margin-bottom: 4px;
-    > label {
-      line-height: 24px;
-      font-size: 14px;
-      color: $N100;
-    }
+    margin-bottom: 8px;
+    line-height: 28px;
+    font-size: 16px;
+    font-weight: 500;
+    color: $N500;
 
-    .value {
-      margin-right: 24px;
-      font-size: 16px;
-      font-weight: 600;
-      color: $N500;
+    > label {
+      display: inline-block;
+      margin: 0 8px;
+      font-weight: normal;
+      color: $N75;
     }
   }
 
   .secondary {
     > label {
       display: inline-block;
-      margin-right: 40px;
+      margin-right: 32px;
       line-height: 20px;
+      font-size: 12px;
+      color: $N65;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+}
+
+.configFile {
+  .fileInfo {
+    margin-bottom: 20px;
+    padding: 46px 0 42px;
+    background-color: #f9fafb;
+    border-radius: 2px;
+    text-align: center;
+
+    .name {
+      margin-bottom: 8px;
+      line-height: 28px;
+      font-size: 14px;
+      font-weight: 500;
+      color: $N500;
+    }
+
+    .time {
+      height: 20px;
       font-size: 12px;
       color: $N65;
     }
 
-    .status {
+    .link {
       display: inline-block;
+      margin-left: 20px;
+      color: $P75;
+      cursor: pointer;
     }
   }
 
+  .document {
+    margin-top: 20px;
+    line-height: 20px;
+    font-size: 12px;
+    color: $N65;
+
+    .note {
+      float: left;
+      margin-right: 8px;
+      display: inline-block;
+      width: 32px;
+      height: 20px;
+      border-radius: 1px;
+      background-color: $N30;
+      color: $N100;
+      text-align: center;
+    }
+  }
+}
+
+.recentRecord {
+  .title {
+    margin-bottom: 12px;
+    line-height: 28px;
+    font-size: 14px;
+    font-weight: 500;
+    color: $N500;
+  }
+
+  .record {
+    margin-left: 16px;
+    margin-bottom: 20px;
+    font-size: 12px;
+  }
+
+  .status {
+    margin-bottom: 12px;
+    font-size: 12px;
+  }
+
+  .operator {
+    margin-bottom: 4px;
+    line-height: 20px;
+    color: $N300;
+  }
+
+  .time {
+    margin-bottom: 4px;
+    line-height: 20px;
+    color: $N75;
+  }
+
+  .link {
+    text-align: right;
+    font-size: 12px;
+  }
+
+  .reason {
+    margin-bottom: 4px;
+    line-height: 20px;
+    color: $N75;
+  }
+
+  .hideReason {
+    display: inline-block;
+    width: calc(100% - 52px);
+    @include textCut;
+    vertical-align: middle;
+  }
+
+  .expand,
+  .collapse {
+    line-height: 20px;
+    color: $P75;
+    cursor: pointer;
+  }
+
+  .collapse {
+    display: inline-block;
+    margin-top: 8px;
+  }
+}
+
+.testInstance {
+  .title {
+    margin-bottom: 12px;
+    line-height: 28px;
+    font-size: 14px;
+    font-weight: 500;
+    color: $N500;
+  }
+
+  .note {
+    line-height: 18px;
+    font-size: 12px;
+    color: $N75;
+  }
+}
+
+.versionDetail {
   .operateBtns {
     float: right;
     margin-top: 8px;
@@ -43,58 +171,6 @@
       float: right;
       display: inline-block;
       margin-left: 12px;
-    }
-  }
-
-  .confgFile {
-    padding: 0 40px 32px;
-    background-color: $N0;
-    border-radius: 2px;
-    box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
-
-    .file {
-      padding: 20px 0;
-      height: 184px;
-      text-align: center;
-
-      .name {
-        margin: 46px 0 20px;
-        line-height: 20px;
-        font-size: 14px;
-        font-weight: 500;
-      }
-
-      .time {
-        height: 20px;
-        font-size: 12px;
-        color: $N65;
-      }
-
-      .link {
-        display: inline-block;
-        margin-left: 20px;
-        color: $P75;
-        cursor: pointer;
-      }
-    }
-
-    .document {
-      margin-top: 20px;
-      line-height: 20px;
-      font-size: 12px;
-      color: $N65;
-
-      .note {
-        float: left;
-        margin-right: 8px;
-        display: inline-block;
-        width: 32px;
-        height: 20px;
-        border-radius: 1px;
-        background-color: $N30;
-        color: $N100;
-        text-align: center;
-      }
     }
   }
 }
