--- a/src/components/Base/Tooltip/index.scss
+++ b/src/components/Base/Tooltip/index.scss
@@ -18,7 +18,7 @@ $bgcolor: $text-color;
 
   &:hover {
     box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
-    border: solid 1px $N30;
+    //border: solid 1px $N30;
   }
   &:focus {
     box-shadow: 0 1px 3px 0 #474e5d11;
