--- a/src/pages/Dashboard/Versions/index.scss
+++ b/src/pages/Dashboard/Versions/index.scss
@@ -70,7 +70,7 @@
   }
 
   .activeVersion {
-    margin-bottom: 36px;
+    margin-bottom: 24px;
     overflow: hidden;
 
     .total {
@@ -87,7 +87,7 @@
       float: left;
       display: inline-block;
       box-sizing: border-box;
-      margin-right: 12px;
+      margin: 0 12px 12px 0;
       height: 44px;
       padding: 12px;
       border-radius: 2px;
