--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -166,4 +166,10 @@
   .CodeMirror {
     font-family: "roboto monospace", monospace, sans-serif;
   }
+
+  pre {
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
 }
