--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -27,10 +27,12 @@ $footer-padding-top: 84px;
 $content-height: calc(100vh - #{$footer-height} - #{$footer-padding-top});
 $base-margin: 24px;
 $card-width: 264px;
+$create-content-width: 927px;
 
 $page-bottom: 48px;
 $main-height: calc(100vh);
 $main-min-height: 650px;
+
 
 // card
 $app-card-width: 264px;
