--- a/src/components/CheckFiles/index.scss
+++ b/src/components/CheckFiles/index.scss
@@ -1,27 +1,66 @@
 @import "~scss/vars";
 
 .checkFiles {
+  position: relative;
+
   li {
     margin-bottom: 8px;
-    line-height: 32px;
-    box-shadow: 0 1px 0 0 $N10;
+    padding: 6px 20px;
+    line-height: 20px;
+    background-color: $N0;
     font-size: 12px;
+    text-align: left;
 
     &.none {
       opacity: 0.5;
+    }
+
+    &.error {
+      .name, .description {
+        color: $R200;
+      }
     }
   }
 
   .name {
     float: left;
     display: inline-block;
-    height: 32px;
-    width: 30%;
+    width: 25%;
     color: $N300;
   }
 
   .description {
-    width: 70%;
+    margin-left: 25%;
+    width: 75%;
     color: $N75;
+  }
+
+  .configMask {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background-image: linear-gradient(to bottom, rgba($body-bg, 0.75), $body-bg);
+  }
+
+  .document {
+    margin-top: 20px;
+    line-height: 20px;
+    font-size: 12px;
+    color: $N65;
+
+    .note {
+      float: left;
+      margin-right: 8px;
+      display: inline-block;
+      width: 32px;
+      height: 20px;
+      border-radius: 1px;
+      background-color: $N30;
+      color: $N100;
+      text-align: center;
+    }
   }
 }
