--- a/src/components/Layout/SideNav/index.scss
+++ b/src/components/Layout/SideNav/index.scss
@@ -62,9 +62,10 @@
     .imageOuter {
       float: left;
       display: inline-block;
+      margin: 10px 16px;
       width: 32px;
       height: 32px;
-      margin: 10px 16px;
+      line-height: 32px;
       opacity: 0.5;
 
       &.activeApp {
