--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -4,8 +4,8 @@ $menu-sub-nav-width: 192px;
 $menu-width: $menu-nav-width + $menu-sub-nav-width;
 $columns: 12;
 
-$max-center-page-width: 1200px;
-$min-center-page-margin: 50px;
+$max-center-page-width: 950px;
+$min-center-page-margin: 20px;
 
 $grid-gap: 24px;  // gap for normal layout
 $grid-gap-dev: 20px;  // gap for dev/admin layout
@@ -27,10 +27,12 @@ $footer-padding-top: 84px;
 $content-height: calc(100vh - #{$footer-height} - #{$footer-padding-top});
 $base-margin: 24px;
 $card-width: 264px;
+$create-content-width: 927px;
 
 $page-bottom: 48px;
 $main-height: calc(100vh);
 $main-min-height: 650px;
+
 
 // card
 $app-card-width: 264px;
