--- a/src/scss/partial/_color.scss
+++ b/src/scss/partial/_color.scss
@@ -97,7 +97,7 @@ $th-background-color: #efe9f7;
 $li-bg:#f5f7fa;
 $li-hover-bg: rgba(213, 218, 229, 0.15);
 $link-hover: $P75;
-$tr-hover-bg: rgba(213, 218, 229, 0.15);
+$tr-hover-bg: $N0;
 $body-bg: #f9fafb;
 $delete-btn: #ac4949;
 
