--- a/src/components/Base/Button/index.scss
+++ b/src/components/Base/Button/index.scss
@@ -13,6 +13,8 @@
   transition: all .3s ease-in-out;
   :global {
     .icon {
+      float: left;
+      margin-top: -2px;
       vertical-align: baseline;
     }
   }
@@ -52,7 +54,7 @@
   }
 
   &.default {
-    color: $P75;
+    color: $N300;
     background-color: $N0;
     box-shadow: 0 1px 3px 0 rgba(71, 78, 93, 0.07);
     border: solid 1px $N30;
