--- a/src/components/Toolbar/index.scss
+++ b/src/components/Toolbar/index.scss
@@ -1,3 +1,5 @@
+@import '~scss/vars';
+
 %pull-right {
   float: right;
 }
@@ -8,13 +10,32 @@
 
   button {
     margin-left: 12px;
+
+    &:first-child{
+      margin-left: 0;
+    }
   }
 
   .search {
     display: inline-block;
     width: 320px;
     border-radius: 2px;
-    background-color: #fff;
+
+    input {
+      background-color: $background-color;
+      border-color: $background-color;
+      cursor: pointer;
+
+      &:hover {
+        border-color: $N10;
+      }
+
+      &:focus {
+        border-color: $P75;
+        box-shadow: 0 4px 8px 0 rgba(52, 57, 69, 0.05), 0 2px 2px 0 rgba(73, 33, 173, 0.1);
+        cursor: default;
+      }
+    }
   }
 
   .refreshBtn {
