--- a/src/pages/Dashboard/Clusters/Detail/index.scss
+++ b/src/pages/Dashboard/Clusters/Detail/index.scss
@@ -16,8 +16,9 @@
     .more{
       float: right;
       font-weight: normal;
+      font-size: 12px;
+      color: $P75;
       cursor: pointer;
-      @include moreText();
     }
   }
 }
@@ -136,6 +137,7 @@
 }
 
 .addNodesBtn {
+  float: right;
   .addNodeTxt {
     margin-left: 3px;
     margin-top: -8px;
@@ -241,5 +243,20 @@
     font-weight: normal;
     color: $body-fg-color;
     margin-right: 10px;
+  }
+}
+
+.toolbar {
+  input {
+    background-color: $N0 !important;
+    border-color: $N0 !important;
+
+    &:hover {
+      border-color: $N10 !important;
+    }
+
+    &:focus {
+      border-color: $P75 !important;
+    }
   }
 }
