--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -1,10 +1,11 @@
 $content-width: 1128px;
+$page-min-width: 1200px;
 $menu-nav-width: 64px;
 $menu-sub-nav-width: 192px;
 $menu-width: $menu-nav-width + $menu-sub-nav-width;
 $columns: 12;
 
-$max-center-page-width: 950px;
+$max-center-page-width: 1000px;
 $min-center-page-margin: 20px;
 
 $grid-gap: 24px;  // gap for normal layout
