feat: Add developer new app info pages

--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -94,3 +94,21 @@
   align-items: center;
   flex-direction: column;
 }
+
+@mixin note-font ($line-height: 20px, $font-size: 12px){
+  line-height: $line-height;
+  font-size: $font-size;
+  color: $N75;
+}
+
+@mixin title-font ($line-height: 28px, $font-size: 14px) {
+  line-height: $line-height;
+  font-size: $font-size;
+  color: $N500;
+}
+
+@mixin normal-font  ($line-height: 28px, $font-size: 14px) {
+  line-height: 20px;
+  font-size: 12px;
+  color: $N300;
+}
