--- a/src/pages/Dashboard/TestingEnv/index.scss
+++ b/src/pages/Dashboard/TestingEnv/index.scss
@@ -2,6 +2,16 @@
 
 $body-margin: 132px;
 $pg-margin: 18px;
+$card-height: 188px;
+
+%btnAdd {
+  margin-top: 20px;
+  :global {
+    .icon {
+      vertical-align: bottom;
+    }
+  }
+}
 
 .layout {
   margin-top: $pg-margin !important;
@@ -67,7 +77,173 @@ $pg-margin: 18px;
 
     .tooltip {
       width: 100%;
+      cursor: default;
+    }
+    .popper {
+      margin-bottom: 0;
+    }
+  }
+
+  .tabs {
+    text-align: center;
+    background: none;
+    border: none;
+    margin-top: -40px;
+
+    &>div {
+      font-size: $size-normal;
+      line-height: 1.14;
+      padding-bottom: 10px;
+      margin-right: 20px;
+    }
+  }
+
+  .body {
+    padding: 0;
+
+    .emptyData {
+      height: 303px;
+      @include centerAll;
+
+      p:first-child {
+        font-size: $size-normal;
+        font-weight: 500;
+        line-height: 2;
+        color: $N500;
+
+        & + p {
+          font-size: $size-small;
+          line-height: 1.67;
+          color: $N75;
+        }
+      }
+      .btnAddEnv {
+        @extend %btnAdd;
+      }
+    }
+
+    .actionPop {
+      .actionBar {
+        transform: rotate(90deg);
+      }
+      :global {
+        .operate-menu {
+          font-size: $size-small;
+          .icon {
+            display: inline-block;
+            min-width: auto;
+            background-color: transparent;
+            padding-left: 0;
+            padding-right: 4px;
+            vertical-align: sub;
+          }
+        }
+      }
+    }
+
+    .fixMenu {
+      margin-top: -10px;
+    }
+
+    .envs {
+      flex-flow: wrap;
+
+      .envItem {
+        height: $card-height;
+        .name {
+          display: inline-block;
+          font-size: $size-normal;
+          font-weight: 500;
+          line-height: 2;
+          color: $N500;
+        }
+        .desc {
+          display: block;
+          font-size: $size-small;
+          line-height: 1.67;
+          color: $N75;
+        }
+
+        .bottomInfo {
+          margin-top: 40px;
+          .info {
+            display: inline-block;
+            margin-right: 20px;
+
+            .label {
+              font-size: $size-small;
+              line-height: 1.67;
+              color: $N75;
+            }
+            .val {
+              font-size: $size-small;
+              font-weight: 500;
+              line-height: 1.67;
+              color: $N500;
+            }
+          }
+        }
+      }
+
+      .cardAddEnv {
+        height: $card-height;
+        background: $N10;
+        @include centerAll;
+
+        .btnAdd {
+          @extend %btnAdd;
+          color: $N300;
+        }
+      }
+
+    }
+
+    .authInfos {
+      .info {
+        padding: 14px auto;
+        font-size: $size-small;
+        &>span {
+          display: inline-block;
+          margin-right: 20px;
+        }
+        .name {
+          font-weight: 500;
+          color: $N300;
+          min-width: 50px;
+          width: 20%;
+        }
+        .desc{
+          min-width: 100px;
+          width: 20%;
+          color: $N75;
+        }
+        .cont {
+          min-width: 140px;
+          color: $N75;
+        }
+        .time {
+          float: right;
+          margin-right: 64px;
+          color: $N65;
+        }
+      }
+      .addAuthInfo {
+        margin-top: 25px;
+        :global {
+          .icon {
+            vertical-align: sub;
+          }
+        }
+        &>.btnAdd {
+          font-size: $size-small;
+          color: $P75;
+          cursor: pointer;
+          margin-left: 4px;
+        }
+      }
     }
   }
 
 }
+
+
