--- a/src/pages/Dashboard/Reviews/index.scss
+++ b/src/pages/Dashboard/Reviews/index.scss
@@ -1,7 +1,25 @@
 @import '~scss/vars';
-.apps{
-  min-width: 1000px !important;
+.types {
+  margin-bottom: 16px;
+
+  > label {
+    display: inline-block;
+    padding: 9px 12px;
+    border-radius: 2px;
+    background-color: $N0;
+    border: 1px solid $N10;
+    font-size: 14px;
+    line-height: 14px;
+    color: $N300;
+    cursor: pointer;
+
+    &.active {
+      color: $P75;
+      border-color: $P75;
+    }
+  }
 }
+
 .appCardContent {
   >a{
     display: inline-block;
